force-app/main/default/objects/DVM_Account__c/DVM_Account__c.object-meta.xml
<CustomObject>
    <label>DVM Account</label>
    <nameField>
        <label>DVM Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DVM Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>