force-app/main/default/objects/DVM_Account__c/fields/accessPlatformX__c.field-meta.xml
<CustomField>
    <fullName>accessPlatformX__c</fullName>
    <defaultValue>false</defaultValue>
    <label>accessPlatformX</label>
    <type>Checkbox</type>
</CustomField>