force-app/main/default/objects/DVM_Account__c/fields/catalogManagementTypeCode__c.field-meta.xml
<CustomField>
    <fullName>catalogManagementTypeCode__c</fullName>
    <label>catalogManagementTypeCode</label>
    <length>64</length>
    <type>Text</type>
</CustomField>