force-app/main/default/objects/DVM_Account__c/fields/discoverAccepted__c.field-meta.xml
<CustomField>
    <fullName>discoverAccepted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>discoverAccepted</label>
    <type>Checkbox</type>
</CustomField>