force-app/main/default/objects/DVM_Account__c/fields/displayName__c.field-meta.xml
<CustomField>
    <fullName>displayName__c</fullName>
    <label>displayName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>