force-app/main/default/objects/DVM_Account__c/fields/doNotCallForClientInfo__c.field-meta.xml
<CustomField>
    <fullName>doNotCallForClientInfo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>doNotCallForClientInfo</label>
    <type>Checkbox</type>
</CustomField>