force-app/main/default/objects/DVM_Account__c/fields/enablePimsWriteBack__c.field-meta.xml
<CustomField>
    <fullName>enablePimsWriteBack__c</fullName>
    <defaultValue>false</defaultValue>
    <label>enablePimsWriteBack</label>
    <type>Checkbox</type>
</CustomField>