force-app/main/default/objects/DVM_Account__c/fields/healthInfoNumber__c.field-meta.xml
<CustomField>
    <fullName>healthInfoNumber__c</fullName>
    <label>healthInfoNumber</label>
    <length>64</length>
    <type>Text</type>
</CustomField>