force-app/main/default/objects/DVM_Account__c/fields/homeWebsite__c.field-meta.xml
<CustomField>
    <fullName>homeWebsite__c</fullName>
    <label>homeWebsite</label>
    <type>Url</type>
</CustomField>