force-app/main/default/objects/DVM_Account__c/fields/legalName__c.field-meta.xml
<CustomField>
    <fullName>legalName__c</fullName>
    <label>legalName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>