force-app/main/default/objects/DVM_Account__c/fields/LoyaltyPoints__c.field-meta.xml
<CustomField>
    <fullName>LoyaltyPoints__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LoyaltyPoints</label>
    <type>Checkbox</type>
</CustomField>