force-app/main/default/objects/DVM_Account__c/fields/marketingEmailType__c.field-meta.xml
<CustomField>
    <fullName>marketingEmailType__c</fullName>
    <label>marketingEmailType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>