force-app/main/default/objects/DVM_Account__c/fields/masterCardAccepted__c.field-meta.xml
<CustomField>
    <fullName>masterCardAccepted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>masterCardAccepted</label>
    <type>Checkbox</type>
</CustomField>