force-app/main/default/objects/DVM_Account__c/fields/merchantPaymentGateway__c.field-meta.xml
<CustomField>
    <fullName>merchantPaymentGateway__c</fullName>
    <label>merchantPaymentGateway</label>
    <length>255</length>
    <type>Text</type>
</CustomField>