force-app/main/default/objects/DVM_Account__c/fields/navigationType__c.field-meta.xml
<CustomField>
    <fullName>navigationType__c</fullName>
    <label>navigationType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>