force-app/main/default/objects/DVM_Account__c/fields/officeUseEnabled__c.field-meta.xml
<CustomField>
    <fullName>officeUseEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>officeUseEnabled</label>
    <type>Checkbox</type>
</CustomField>