force-app/main/default/objects/DVM_Account__c/fields/optOutOfCareCalls__c.field-meta.xml
<CustomField>
    <fullName>optOutOfCareCalls__c</fullName>
    <defaultValue>false</defaultValue>
    <label>optOutOfCareCalls</label>
    <type>Checkbox</type>
</CustomField>