force-app/main/default/objects/DVM_Account__c/fields/platformType__c.field-meta.xml
<CustomField>
    <fullName>platformType__c</fullName>
    <label>platformType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>