force-app/main/default/objects/DVM_Account__c/fields/platformTypeCode__c.field-meta.xml
<CustomField>
    <fullName>platformTypeCode__c</fullName>
    <label>platformTypeCode</label>
    <length>64</length>
    <type>Text</type>
</CustomField>