force-app/main/default/objects/DVM_Account__c/fields/practiceAffiliationType__c.field-meta.xml
<CustomField>
    <fullName>practiceAffiliationType__c</fullName>
    <label>practiceAffiliationType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>