force-app/main/default/objects/DVM_Account__c/fields/relationshipType__c.field-meta.xml
<CustomField>
    <fullName>relationshipType__c</fullName>
    <label>relationshipType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>