force-app/main/default/objects/DVM_Account__c/fields/siteUrl__c.field-meta.xml
<CustomField>
    <fullName>siteUrl__c</fullName>
    <label>siteUrl</label>
    <type>Url</type>
</CustomField>