force-app/main/default/objects/DVM_Account__c/fields/skinType__c.field-meta.xml
<CustomField>
    <fullName>skinType__c</fullName>
    <label>skinType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>