force-app/main/default/objects/DVM_Account__c/fields/storefrontTypeCode__c.field-meta.xml
<CustomField>
    <fullName>storefrontTypeCode__c</fullName>
    <label>storefrontTypeCode</label>
    <length>64</length>
    <type>Text</type>
</CustomField>