force-app/main/default/objects/DVM_Account__c/fields/taxCompanyType__c.field-meta.xml
<CustomField>
    <fullName>taxCompanyType__c</fullName>
    <label>taxCompanyType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>