force-app/main/default/objects/DVM_Account__c/fields/themeType__c.field-meta.xml
<CustomField>
    <fullName>themeType__c</fullName>
    <label>themeType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>