force-app/main/default/objects/DVM_Account__c/fields/uuid__c.field-meta.xml
<CustomField>
    <fullName>uuid__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>uuid</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>