force-app/main/default/objects/DVM_Account__c/fields/visaAccepted__c.field-meta.xml
<CustomField>
    <fullName>visaAccepted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>visaAccepted</label>
    <type>Checkbox</type>
</CustomField>