force-app/main/default/objects/DVM_Account__c/fields/wholesaleTaxCompanyType__c.field-meta.xml
<CustomField>
    <fullName>wholesaleTaxCompanyType__c</fullName>
    <defaultValue>false</defaultValue>
    <label>wholesaleTaxCompanyType</label>
    <type>Checkbox</type>
</CustomField>