force-app/main/default/objects/DVM_Account__c/fields/writeOtcLineItemsToPims__c.field-meta.xml
<CustomField>
    <fullName>writeOtcLineItemsToPims__c</fullName>
    <defaultValue>false</defaultValue>
    <label>writeOtcLineItemsToPims</label>
    <type>Checkbox</type>
</CustomField>