force-app/main/default/objects/DVM_Account__c/fields/writePrescriptionsToPims__c.field-meta.xml
<CustomField>
    <fullName>writePrescriptionsToPims__c</fullName>
    <defaultValue>false</defaultValue>
    <label>writePrescriptionsToPims</label>
    <type>Checkbox</type>
</CustomField>