force-app/main/default/objects/DVM_Account__c/fields/writeRxLineItemsToPims__c.field-meta.xml
<CustomField>
    <fullName>writeRxLineItemsToPims__c</fullName>
    <defaultValue>false</defaultValue>
    <label>writeRxLineItemsToPims</label>
    <type>Checkbox</type>
</CustomField>